# shinran

./: .gitignore  Cargo.toml  Makefile  README.md  shinran.xml.in
.github/workflows/: test.yml
crates/espanso-config/: Cargo.toml
crates/espanso-config/src/: counter.rs  lib.rs
crates/espanso-config/src/config/: mod.rs  path.rs  resolve.rs  store.rs
crates/espanso-config/src/config/parse/: yaml.rs
crates/espanso-config/src/legacy/: config.rs  mod.rs
crates/espanso-config/src/matches/: mod.rs
crates/espanso-config/src/matches/group/: mod.rs  path.rs
crates/espanso-config/src/matches/group/loader/: mod.rs
crates/espanso-config/src/matches/group/loader/yaml/: mod.rs  parse.rs  util.rs
crates/espanso-config/src/matches/store/: default.rs  mod.rs
crates/espanso-render/: Cargo.toml
crates/espanso-render/src/: lib.rs
crates/espanso-render/src/extension/: date.rs  echo.rs  exec_util.rs  mod.rs  random.rs  script.rs  shell.rs
crates/espanso-render/src/renderer/: mod.rs  resolve.rs
crates/ibus_utils/: Cargo.toml
crates/ibus_utils/src/: address.rs  ibus_constants.rs  lib.rs  lookup_table.rs  org.freedesktop.IBus.Engine.xml  org.freedesktop.IBus.Factory.xml  text.rs
crates/shinran-types/: Cargo.toml
crates/shinran-types/src/: lib.rs  stores.rs
crates/shinran_backend/: Cargo.toml
crates/shinran_backend/src/: config.rs  event.rs  lib.rs  match_cache.rs  match_select.rs  path.rs  profile_cache.rs  regex.rs  render.rs
crates/shinran_backend/src/builtin/: process.rs
crates/shinran_config/: Cargo.toml
crates/shinran_config/src/: counter.rs  lib.rs  util.rs
crates/shinran_config/src/config/: mod.rs  path.rs  resolve.rs  store.rs  util.rs
crates/shinran_config/src/config/parse/: mod.rs  yaml.rs
crates/shinran_config/src/matches/: mod.rs  store.rs
crates/shinran_config/src/matches/group/: mod.rs  path.rs
crates/shinran_config/src/matches/group/loader/: mod.rs
crates/shinran_config/src/matches/group/loader/yaml/: mod.rs  parse.rs
crates/shinran_config/src/matches/store/: default.rs  mod.rs
crates/shinran_helpers/: Cargo.toml  README.md
crates/shinran_helpers/src/: lib.rs
crates/shinran_ibus/: Cargo.toml
crates/shinran_ibus/src/: engine.rs  input_context.rs  main.rs
crates/shinran_lib/: Cargo.toml
crates/shinran_lib/src/: builtin.rs  config.rs  cursor.rs  engine.rs  lib.rs  load.rs  match_cache.rs  multiplex.rs  path.rs  regex.rs  render.rs
crates/shinran_lib/src/builtin/: debug.rs  mod.rs  process.rs  search.rs
crates/shinran_lib/src/render/: mod.rs
crates/shinran_render/: Cargo.toml
crates/shinran_render/src/: lib.rs
crates/shinran_render/src/extension/: date.rs  echo.rs  exec_util.rs  random.rs  script.rs  shell.rs  util.rs
crates/shinran_render/src/renderer/: mod.rs  util.rs
crates/shinran_test_helpers/: Cargo.toml  README.md
crates/shinran_types/: Cargo.toml
crates/shinran_types/src/: lib.rs  regex_wrapper.rs  stores.rs  str_arena.rs
crates/shinran_wayland/: Cargo.toml
crates/shinran_wayland/examples/: simple_window.rs
crates/shinran_wayland/src/: font.rs  input_context.rs  main.rs
ibus_utils/: Cargo.toml
ibus_utils/src/: address.rs  ibus_constants.rs  lib.rs  text.rs
shinran/: Cargo.toml
shinran/src/: engine.rs  main.rs  portal.rs  text_engine.rs
src/: address.rs  constants.rs  main.rs  service.rs  text.rs
