[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.clippy]

[workspace.package]
edition = "2021"

[workspace.dependencies]
log = "0.4.14"
anyhow = "1.0.38"
thiserror = "1.0.23"
regex = "1.5.5"
enum-as-inner = "0.6.0"
tempdir = "0.3.7"
dunce = "1.0.1"
compact_str = { version = "0.8.0", features = ["serde", "rkyv"] }
