[package]
name = "shinran_config"
version = "0.1.0"
authors = [
    "Thomas MK <tmke8@posteo.net>",
    "Federico Terzi <federico-terzi@users.noreply.github.com>",
]
edition = "2021"

[dependencies]
shinran_types = { path = "../shinran_types" }

log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
enum-as-inner.workspace = true
serde = { version = "1.0.123", features = ["derive"] }
serde_yaml_ng = "0.10"
glob = "0.3.0"
dunce.workspace = true
walkdir = "2.3.1"
ordered-float = "2.0"
indoc = "1.0.3"
compact_str.workspace = true

[dev-dependencies]
shinran_helpers = { path = "../shinran_helpers" }

tempdir.workspace = true
tempfile = "3.2.0"
mockall = "0.9.1"

[lints]
workspace = true
