[package]
name = "shinran_ibus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibus_utils = { path = "../ibus_utils" }
shinran_lib = { path = "../shinran_lib" }

async-std = { version = "1.12.0", features = ["attributes"] }
event-listener = "5.2.0"
zbus = "4.1.2"
xkeysym = "0.2.1"
