[package]
name = "shinran_lib"
version = "0.1.0"
edition.workspace = true

[dependencies]
espanso-config = { path = "../espanso-config" }
espanso-render = { path = "../espanso-render" }

serde = { version = "1.0.210", features = ["derive"] }
serde_yaml_ng = "0.10.0"
time = { version = "0.3.36", features = ["formatting", "local-offset"] }
dirs = "3.0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
