[package]
name = "shinran_render"
version = "0.1.0"
authors = [
    "Thomas MK <tmke8@posteo.net>",
    "Federico Terzi <federico-terzi@users.noreply.github.com>",
]
edition = "2021"

[dependencies]
shinran_types = { path = "../shinran_types" }

log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
lazy_static.workspace = true
enum-as-inner.workspace = true
chrono = { version = "0.4.19", features = ["unstable-locales"] }
rand = "0.8.3"
sys-locale = "0.1.0"

[lints]
workspace = true
