[package]
name = "shinran_wayland"
version = "0.1.0"
edition.workspace = true

[dependencies]
shinran_lib = { path = "../shinran_lib" }

memmap2 = "0.9.4"
tempfile = "3.10.1"
wayland-client = "0.31.5"
wayland-protocols-misc = { version = "0.3.3", features = ["client"] }
xkbcommon = { version = "0.7.0", features = ["wayland"] }
calloop = "0.14.1"
calloop-wayland-source = "0.4.0"
slotmap = "1.0.7"
