[package]
name = "shinran_wayland"
version = "0.1.0"
edition.workspace = true

[dependencies]
shinran_backend = { path = "../shinran_backend" }

memmap2 = "0.9.4"
tempfile = "3.10.1"
wayland-client = "0.31.5"
wayland-protocols-misc = { version = "0.3.3", features = ["client"] }
xkbcommon = { version = "0.7.0", features = ["wayland"] }
calloop = "0.14.1"
calloop-wayland-source = "0.4.0"
slotmap = "1.0.7"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
env_logger = "0.11.5"
wayland-protocols = "0.32.5"
